[project]
name = "limitless-llm"
version = "0.1.0"
description = "TPM-aware scheduling and context budget management for free-tier LLM APIs"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "tiktoken>=0.7.0",
    "limits>=3.12.0",
    "llama-index-core>=0.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.flake8-bugbear]
# typer.Argument/typer.Option are designed to be called in argument defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
strict = true
python_version = "3.11"

[project.scripts]
limitless-llm = "limitless_llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
